--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ h2 {
 .main {
 	width: 100%;
 	background-color: #fff;
+	padding: 10px;
 }
 
 #item {
@@ -57,6 +58,8 @@ h2 {
 	font-weight: 200;
 	font-size: 1em;
 }
+
+
 
 #add {
 	background-color: transparent;
