--- a/css/style.css
+++ b/css/style.css
@@ -52,15 +52,12 @@ h2 {
 #item {
 	text-align: center;
 	background-color: transparent;
-	border: none;
+	border: 1px dashed #000;
+	border-radius: 10px;
+	padding: 4px;
 	font-family: 'Helvetica', sans-serif;
 	font-weight: 200;
 	font-size: 1em;
 }
 
 
-
-#add {
-	background-color: transparent;
-	border: none;
-}
