List items added

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ h2 {
 .main {
 	background-color: #fff;
 	padding: 10px;
+	box-shadow: 10px 6px 5px #C4C4C4;
 }
 
 #item {
@@ -58,6 +59,12 @@ h2 {
 	font-family: 'Helvetica', sans-serif;
 	font-weight: 200;
 	font-size: 1em;
+}
+
+.new-items {
+	margin-top: 10px;
+	background-color: #fff;
+	padding: 5px;
 }
 
 
