--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
 
 body {
 	background: #f5f5f5;
-	background-size: 150px;
 	font-family: 'Source Code Pro', sans-serif;
 	margin: 0;
 }
@@ -47,24 +46,44 @@ h2 {
 .main {
 	background-color: #fff;
 	padding: 10px;
-	box-shadow: 10px 6px 5px #C4C4C4;
+	box-shadow: 2px 2px 2px #C4C4C4;
 }
 
 #item {
 	text-align: center;
 	background-color: transparent;
-	border: 1px dashed #000;
+	border: 1px dashed #B8B8B8;
 	border-radius: 10px;
 	padding: 4px;
 	font-family: 'Helvetica', sans-serif;
 	font-weight: 200;
-	font-size: 1em;
+	font-size: .95em;
 }
 
 .new-items {
+	margin: 0 auto;
 	margin-top: 10px;
 	background-color: #fff;
 	padding: 5px;
+	width: 75%;
+	box-shadow: 2px 2px 2px #C4C4C4;
+}
+
+.check {
+	padding: 5px;
+	border: none;
+	background-color: transparent;
+	margin-top: 10px;
+	float: right;
+
+}
+
+.remove {
+	padding: 5px;
+	border: none;
+	background-color: transparent;
+	margin-top: 10px;
+	float: left;
 }
 
 
