--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-	width: 100%;
+	width: 60%;
 	text-align: center;
 	margin-right: auto;
 	margin-left: auto;
@@ -7,7 +7,7 @@
 
 body {
 	background: #f5f5f5;
-	font-family: 'Source Code Pro', sans-serif;
+	font-family: 'Helvetica', sans-serif;
 	margin: 0;
 }
 
@@ -15,7 +15,7 @@ h1 {
 	font-family: 'Helvetica', sans-serif;
 	color: #fff;
 	letter-spacing: 0px;
-	font-size: 6em;
+	font-size: 5em;
 	margin-bottom: 20px;
 	margin-top: 20px;
 }
@@ -33,19 +33,15 @@ h2 {
 	padding: 30px;
 }
 
-#cart {
-	position: absolute;
-	right: 20px;
-	bottom: 10px;
-}
 
 .main {
 	background-color: #fff;
 	padding: 10px;
+	border-bottom: 5px solid #f5f5f5;
 	box-shadow: 2px 2px 2px #C4C4C4;
 }
 
-#item {
+.item {
 	text-align: center;
 	background-color: transparent;
 	border: 1px dashed #B8B8B8;
@@ -56,30 +52,27 @@ h2 {
 	font-size: .95em;
 }
 
-.new-items {
-	margin: 0 auto;
-	margin-top: 10px;
+li {
+	list-style: none;
+}
+
+.list-container {
 	background-color: #fff;
-	padding: 5px;
-	width: 75%;
 	box-shadow: 2px 2px 2px #C4C4C4;
+	height: 52vh;
+	padding-top: 40px;
 }
 
-.check {
-	padding: 5px;
-	border: none;
-	background-color: transparent;
-	margin-top: 10px;
-	float: right;
-
+.placehold {
+	opacity: .2;
 }
 
+
+.check,
 .remove {
-	padding: 5px;
 	border: none;
 	background-color: transparent;
-	margin-top: 10px;
-	float: left;
 }
+
 
 
