--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,18 @@
 .container {
-  width: 60%;
-  text-align: center;
+  box-shadow: 2px 2px 65px #000;
   margin-right: auto;
   margin-left: auto;
+  text-align: center;
+  width: 60%;
   max-width: 900px;
-  min-width: 320px;
 }
 
 body {
-	background: #f5f5f5;
-	font-family: 'Walter Turncoat', cursive;
-	font-weight: 200;
+	background: url('../img/grocery-bg.jpg');
+	background-size: cover;
 	margin: 0;
+	font-weight: 200;
+	font-family: 'Walter Turncoat', cursive;
 }
 
 h1 {
@@ -38,41 +39,41 @@ h2 {
 
 
 .main {
-	background: #fff;
+	background: url('../img/pad.png');
 	padding: 10px;
-	border-bottom: 5px solid #f5f5f5;
-	box-shadow: 2px 2px 2px #C4C4C4;
 }
 
 .textfield {
-	text-align: center;
-	background-color: transparent;
-	border: 1px dashed #B8B8B8;
+	border: 1px dashed #fff;
 	border-radius: 10px;
 	padding: 4px;
+	font-size: .95em;
 	font-family: 'Helvetica', sans-serif;
 	font-weight: 200;
-	font-size: .95em;
+	text-align: center;
+}
+
+.button {
+	display: none;
 }
 
 li {
-    list-style: none;
     overflow: auto;
-    width: 75%;
-    margin: 0 auto 10px;
+    width: 90%;
+    list-style: none;
+    margin: 0 auto 5px;
 }
 
 .list-container {
     background: url('http://4.bp.blogspot.com/-tRopCPSe4h4/TydMn-jaXdI/AAAAAAAAAQ4/IQW4Ftb-PHo/s1600/Notebook%2BPaper%2B2.jpg');
     background-size: 850px 490px;
-    box-shadow: 2px 2px 2px #C4C4C4;
     min-height: 52vh;
-    padding-top: 40px;
+    padding-top: 59px;
     padding-bottom: 20px;
 }
 
 .list {
-	padding-left: 0px;
+  padding-left: 0px;
 }
 
 .placehold {
