Css Animations added

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-	background: url('../img/grocery-bg.jpg');
+	background: url('http://i.huffpost.com/gen/1931696/images/o-GROCERY-STORE-AISLE-facebook.jpg');
 	background-size: cover;
 	margin: 0;
 	font-weight: 200;
