--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-	background: url('http://i.huffpost.com/gen/1931696/images/o-GROCERY-STORE-AISLE-facebook.jpg');
+	background: url('https://d1qkyo3pi1c9bx.cloudfront.net/D7021408-671F-42FA-837E-DEB20A6B3D76/34fdc6af-bc50-4f52-8881-8b6bf5724a43.jpg');
 	background-size: cover;
 	margin: 0;
 	font-weight: 200;
